Fixed spacing

--- a/public/default.css
+++ b/public/default.css
@@ -4,13 +4,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
+    
 
-body {
-    overflow-y: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 li, a, button {
@@ -26,7 +21,6 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
-    float: left;
 }
 
 .logo {
@@ -44,15 +38,14 @@ header {
 
 .nav_links li a {
     transition: all 0.3s ease 0s;
-
 }
 
 .nav_links li a:hover {
-    color: #0088a9
+    color: #0088a9;
 }
 
 button {
-    padding: 9px 25px;
+    padding: 9px 5px;
     background-color: rgba(0, 136, 169, 1);
     border: none;
     border-radius: 50px;
@@ -66,5 +59,7 @@ button:hover {
 
 #gameBoard {
     width: 500px;
-    float: left;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 50px;
 }
